--- a/src/components/loading/loading.css
+++ b/src/components/loading/loading.css
@@ -36,6 +36,7 @@
     align-items: center;
     justify-content: center;
     background-color: var(--primary);
+    z-index: 200;
 }
 
 .login_failure{
