--- a/src/components/loading/loading.css
+++ b/src/components/loading/loading.css
@@ -35,7 +35,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--primary);
+    background-color: var(--bg);
     z-index: 200;
 }
 
@@ -51,6 +51,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    box-shadow: var(--shadow);
 }
 
 .login_failure svg{
