--- a/src/components/loading/loading.css
+++ b/src/components/loading/loading.css
@@ -1,6 +1,7 @@
 .loading_wrapper{
     width: 15px;
     height: 15px;
+    background-color: transparent;
 }
 .loading{
     display: flex;
@@ -19,8 +20,9 @@
     left: 0;
     top: 0;
     aspect-ratio: 1;
-    border: 3px solid #e0edff;
+    border: 4px solid var(--sec);
     border-top-color: var(--primary);
+    /* border-bottom-color: var(--bg); */
     border-radius: 50%;
     animation: loading 1s linear infinite;
     
@@ -60,6 +62,6 @@
 
 @keyframes loading{
     to{
-        transform: rotate(1turn);
+        transform: rotate(2turn);
     }
 }
