--- a/src/pages/meetings/meetings.css
+++ b/src/pages/meetings/meetings.css
@@ -810,6 +810,74 @@
 }
 
 
+.add_parts_wrapper{
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    z-index: 60;
+}
+
+.add_parts_inner{
+    background-color: white;
+    width: 60%;
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.add_parts_top{
+    display: flex;
+    align-items: center;
+    background-color: var(--primary);
+    color: white;
+    height: 30px;
+    padding: 15px;
+    justify-content: space-between;
+   
+}
+
+.add_parts_body{
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.part_info_container{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.part_img{
+    width: 35px;
+    height: 35px;
+    aspect-ratio: 1;
+}
+
+.part_img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.parts_container{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 200px);
+    gap: 10px;
+}
+
+
 
 
 @media screen and (max-width: 740px){
