--- a/src/pages/posts/posts.css
+++ b/src/pages/posts/posts.css
@@ -228,7 +228,7 @@
 
 
 .home_video{
-    height: 500px;
+    height: 100%;
     width: 100%;
     padding: 5px 0;
 
@@ -244,7 +244,7 @@
 .home_video_player .video{
     /* position: absolute; */
     width: 100%;
-    height: 270px;
+    height: 100%;
     object-fit: cover;
    
     /* left: 0;
@@ -428,7 +428,8 @@ audio{
 
 .shared_video_2{
     width: 100%;
-    height: 250px;
+    height: 500px;
+    object-fit: cover;
 }
 
 video{
@@ -486,6 +487,11 @@ video{
         
         /* margin: 15px; */
     
+    }
+
+    .shared_video_2{
+        width: 100%;
+        height: 250px;
     }
 
     .shared_video_1{
