--- a/src/pages/posts/posts.css
+++ b/src/pages/posts/posts.css
@@ -150,7 +150,7 @@
     gap:5px;
     box-shadow: var(--shadow);  
     align-items: center;
-    gap: 5px;
+   
    
     
     /* margin: 15px; */
@@ -244,7 +244,7 @@
 .home_video_player .video{
     /* position: absolute; */
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     object-fit: cover;
    
     /* left: 0;
