--- a/src/pages/posts/posts.css
+++ b/src/pages/posts/posts.css
@@ -372,6 +372,9 @@ audio{
     width: 35px;
     height: 35px;
     aspect-ratio: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .new_user img{
@@ -428,14 +431,14 @@ audio{
 
 .shared_video_2{
     width: 100%;
-    height: 500px;
-    object-fit: cover;
+    min-height: 600px;
+    object-fit:fill;
 }
 
 video{
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit:contain;
 }
 
 
