--- a/src/App.css
+++ b/src/App.css
@@ -931,6 +931,10 @@
   left: 90px;
   bottom: -60px;
   z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #aaa;
 }
 
 .view_doc_photo img{
