--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -135,7 +135,8 @@
     display: flex;
     flex-direction: column;
     padding: 20px;
-    /* width: 100%; */
+    width: 90%;
+    margin: 0 auto;
     
     /* align-items: center; */
 }
