--- a/src/pages/members/members.css
+++ b/src/pages/members/members.css
@@ -62,6 +62,13 @@
     background-color: darkblue;
 }
 
+.input_edit_form{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 5px;
+}
+
 ._info_div{
     display: block;
     width: 1000%;
